[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "google_image_fetcher"
version = "1.0.0"
description = "A Python library for fetching images from Google."
authors = ["Pabitra Banerjee <rockstarpabitra2204@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pb2204/google_image_fetcher"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.26.0"  # Add other dependencies as needed

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"